#NP# Added validator for createDevice and GlobalExceptionHandler
